--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ services:
   importapp:
     container_name: data-import-container
     image: data-import-image
-    build: /Users/vukpejic/Desktop/rbt/vacation-tracker
+    build: ./
     ports:
       - "8080:8080"
     depends_on:
